# CRAYON

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  INPUTS.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml
src/crayon/: __init__.py  cli.py  imas.py
src/crayon/calculus/: __init__.py  derivatives.py  matrix.py  tensor.py  vector.py
src/crayon/coordinates/: __init__.py  coordinate_coordinator.py  coordinate_system.py
src/crayon/coordinates/coordinates/: __init__.py  base.py  cartesian.py  cylindrical.py  flux_coordinate.py  spherical.py  toroidal.py
src/crayon/dispersion/: __init__.py  base.py  cold.py  fully_relativistic.py  non_relativistic.py
src/crayon/linear_current_drive/: __init__.py  linear_current_drive.py  options.py
src/crayon/plots/: __init__.py  plot_plasma.py  plot_power.py  plot_rays.py
src/crayon/ray_tracing/: __init__.py  initial_conditions.py  options.py  ray.py  ray_tracer.py
src/crayon/ray_tracing/caches/: __init__.py  base.py  coordinates.py  hamiltonian.py  integrator_state.py  intersections.py  mode_conversion.py  plasma.py  tunnelling.py  wave.py
src/crayon/ray_tracing/integrator/: __init__.py  base.py  explicit.py  hybrid.py  implicit.py  options.py  timestep_controller.py  wrappers.py
src/crayon/scripts/: __init__.py  current.py  emission.py  fokker_planck_coupling.py  new.py  optimise.py  pdi.py  plot.py  trace.py
src/crayon/shared/: __init__.py  constants.py  data_structures.py  dimensions.py  helpers.py  io.py  logging.py  numerics.py  physics.py  types.py
src/crayon/system_data/: __init__.py  limiter.py  schemas.py  system_data_provider.py
src/crayon/value_model/: __init__.py  analytic.py  base.py  magnetic_field.py  models.py  splines.py
tests/integration/circular/: __init__.py  test_ebw.py  test_ec.py
tests/integration/circular/ebw/input/: options.toml  rays.toml  system_data.toml
tests/integration/circular/eccd/input/: rays.toml  system_data.toml
tests/integration/cli/: __init__.py  new  plot_ebw  plot_o  trace
tests/integration/mirror/: __init__.py  test_mirror.py
tests/integration/mirror/input/: plasma_data.nc  rays.toml  system_data.toml
tests/integration/slab/: __init__.py  test_magnetised_slab.py  test_oxb.py  test_unmagnetised_slab.py
tests/integration/slab/magnetised/input/: rays.toml  system_data.toml
tests/integration/slab/oxb/input/: options.toml  rays.toml  system_data.toml
tests/integration/slab/unmagnetised/input/: options.toml  rays.toml  system_data.toml
tests/integration/vacuum/: __init__.py  test_vacuum.py
tests/integration/vacuum/input/: options.toml  rays.toml  system_data.toml
tests/integration/vacuum_cylindrical/: __init__.py  test_vacuum.py
tests/integration/vacuum_cylindrical/input/: options.toml  rays.toml  system_data.toml
tests/unit/calculus/: __init__.py  test_derivatives.py  test_matrix.py  test_tensor.py  test_vector.py
tests/unit/coordinates/: __init__.py  test_coordinate_coordinator.py  test_coordinate_system.py  test_coordinates.py  test_flux_coordinates.py
tests/unit/dispersion/: __init__.py  test_cold.py  test_dispersion.py  test_fully_relativistic.py  test_nonrelativistic.py
tests/unit/ray_tracing/: __init__.py  test_initial_conditions.py  test_options.py  test_ray_tracer.py
tests/unit/ray_tracing/caches/: __init__.py  test_coordinates.py  test_hamiltonian.py  test_integrator_state.py  test_plasma.py  test_wave.py
tests/unit/ray_tracing/integrator/: __init__.py  test_base.py  test_options.py
tests/unit/shared/: __init__.py  test_numerics.py  test_physics.py
tests/unit/system_data/: __init__.py  test_limiter.py  test_schemas.py  test_system_data_provider.py
tests/unit/value_model/: __init__.py  test_analytic.py  test_magnetic_field.py  test_models.py  test_splines.py
